6-s3proxy/s3proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  s3proxy
  labels:
    app:  s3proxy
spec:
  selector:
    matchLabels:
      app: s3proxy
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  s3proxy
    spec:
      containers:
      - name:  main
        image: andrewgaul/s3proxy
        # resources:
        #   requests:
        #     cpu: 250m
        #     memory: 256Mi
        #   limits:
        #     cpu: 250m
        #     memory: 1Gi
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 10
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
        - containerPort:  80
          name:  s3proxy
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: s3proxy
      restartPolicy: Always
