6-s3proxy/s3proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3proxy
spec:
  selector:
    app: s3proxy
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: s3proxy
    protocol: TCP
    port: 80
    targetPort: 80
