6-s3proxy/s3proxy-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3proxy
spec:
  ingressClassName: nginx
  rules:
  - host: s3.kind-ingress
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s3proxy
            port:
              number: 80
